test/Fail/NoFlatSplit.err
NoFlatSplit.agda:13.8-12: error: [SplitOnUnusableCohesion]
Cannot pattern match against flat argument of type Id A
when checking that the pattern id x has type Id A
